[package]
name = "debug_parser"
description = "parse the output of `std::fmt::Debug` using a heuristic best guess"
readme = "README.md"
repository = "https://github.com/derekdreery/debug_parser"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html-escape = "0.2.9"
nom = "7.1.0"
#serde = { version = "1", features = ["derive"], optional = true }
