[package]
description = "parse the output of `std::fmt::Debug` using a heuristic best guess"
edition = "2021"
license = "MIT/Apache-2.0"
name = "debug_parser"
readme = "README.md"
repository = "https://github.com/derekdreery/debug_parser"
version = "0.1.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
html-escape = "0.2.9"
nom = "7.1.0"
ordered-float = "2.8"
#serde = { version = "1", features = ["derive"], optional = true }
