[package]
description = "Parse the output of `std::fmt::Debug`"
edition = "2018"
license = "MIT/Apache-2.0"
name = "darrentsung_debug_parser"
readme = "README.md"
repository = "https://github.com/DarrenTsung/debug_parser"
version = "0.3.0"

[dependencies]
anyhow = "1.0"
html-escape = "0.2.9"
nom = "7.1.0"
ordered-float = "2.8"
